--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'assets/css/styles.min.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/css/new-style1.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/new-style.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/Footer-Dark.css' %}">
     <link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}">
     {#    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>#}
@@ -102,6 +102,41 @@
                 willing to volunteer, so that they are able to help the young minds get enough knowledge which they can
                 use it in life.
             </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6">
+            <p align="justify" style="margin-top: 10%">
+                Volunteering builds resilience and preparedness through concrete community action, enhancing knowledge
+                and a sense of responsibility for one's community. Volunteering is a skill-builder in many different
+                areas, and improves your employability, knowledge and experience. Currently we have reached;
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <div class="counter">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                            <div class="employees">
+                                <strong>
+                                    <p style="font-size: 4em" class="counter-count">{{ user_no }}</p>
+                                </strong>
+                                <p class="employee-p">Users</p>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                            <div class="customer">
+                                <strong>
+                                    <p style="font-size: 4em" class="counter-count">{{ volunteer_no }}</p>
+                                </strong>
+                                <p class="customer-p">Volunteers</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
