--- a/templates/manage.html
+++ b/templates/manage.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'assets/css/styles.min.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/css/new-style1.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/new-style.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/Footer-Dark.css' %}">
     <link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}">
 </head>
@@ -141,12 +141,19 @@
                     <span id="cert">
                         <a class="btn btn-light action-button" id="btn-cert-1" role="button"
                            href="{% url 'manage_applicant' 'Certificate level' %}">
-                            Certificate Level
-                            <br><br>
+                            <strong style="font-size: 1.6em">
+                                Certificate Level
+                            </strong>
+                            <br>
                             <strong>
-                                <span style="font-size: 1.5em">{{ cert.count }} <label
+                                <span style="font-size: 1.4em">{{ cert.count }} <label
                                         for="cert-count">Applicant</label></span>
                             </strong>
+                            <br>
+
+                                <span style="font-size: 1em">{{ cert1.count }} <label
+                                        for="cert-count">Approved</label></span>
+
                         </a>
                     </span>
                 </div>
@@ -154,12 +161,18 @@
                     <span id="cert">
                         <a class="btn btn-light action-button" id="btn-cert-1" role="button"
                            href="{% url 'manage_applicant' 'Diploma level' %}">
-                            Diploma Level
-                            <br><br>
+                            <strong style="font-size: 1.6em">
+                                Diploma Level
+                            </strong>
+                            <br>
                             <strong>
-                                <span style="font-size: 1.5em">{{ dipl.count }} <label
+                                <span style="font-size: 1.4em">{{ dipl.count }} <label
                                         for="cert-count">Applicant</label></span>
                             </strong>
+                            <br>
+
+                                <span style="font-size: 1em">{{ dipl1.count }} <label
+                                        for="cert-count">Approved</label></span>
                         </a>
                     </span>
                 </div>
@@ -170,12 +183,18 @@
                     <span id="cert">
                         <a class="btn btn-light action-button" id="btn-cert-1" role="button"
                            href="{% url 'manage_applicant' 'Degree level' %}">
-                            Degree Level
-                            <br><br>
+                            <strong style="font-size: 1.6em">
+                                Degree Level
+                            </strong>
+                            <br>
                             <strong>
-                                <span style="font-size: 1.5em">{{ degr.count }} <label
+                                <span style="font-size: 1.4em">{{ degr.count }} <label
                                         for="cert-count">Applicant</label></span>
                             </strong>
+                            <br>
+
+                                <span style="font-size: 1em">{{ degr1.count }} <label
+                                        for="cert-count">Approved</label></span>
                         </a>
                     </span>
                 </div>
@@ -183,51 +202,57 @@
                     <span id="cert">
                         <a class="btn btn-light action-button" id="btn-cert-1" role="button"
                            href="{% url 'manage_applicant' 'Masters level' %}">
-                            Masters Level
-                            <br><br>
+                            <strong style="font-size: 1.6em">
+                                Masters Level
+                            </strong>
+                            <br>
                             <strong>
-                                <span style="font-size: 1.5em">{{ mast.count }} <label
+                                <span style="font-size: 1.4em">{{ mast.count }} <label
                                         for="cert-count">Applicant</label></span>
                             </strong>
+                            <br>
+
+                                <span style="font-size: 1em">{{ mast1.count }} <label
+                                        for="cert-count">Approved</label></span>
                         </a>
                     </span>
                 </div>
             </div>
 
-{#            <table class="table">#}
-{#                <thead>#}
-{#                <tr>#}
-{#                    <th>Full name</th>#}
-{#                    <th>Phone</th>#}
-{#                    <th>Status</th>#}
-{#                    <th>Preview</th>#}
-{#                    <th>Approve</th>#}
-{#                </tr>#}
-{#                </thead>#}
-{#                <tbody>#}
-{#                {% for f in name %}#}
-{#                    <tr>#}
-{#                        <td>{{ f.full_name }}</td>#}
-{#                        <td>{{ f.contact }}</td>#}
-{#                        <td>{{ f.status_update }}</td>#}
-{#                        <form action="{% url 'user_data' f.full_name %}" method="get">#}
-{#                            {% csrf_token %}#}
-{#                            <td>#}
-{#                                <button class="btn-success" id="btn-admin">Preview CV</button>#}
-{#                            </td>#}
-{#                        </form>#}
-{#                        <form action="{% url 'approve' f.full_name %}">#}
-{#                            {% csrf_token %}#}
-{#                            <td>#}
-{#                                <button class="btn-success" id="btn-approve" onclick="return submitForm(this.form)">#}
-{#                                    Approve#}
-{#                                </button>#}
-{#                            </td>#}
-{#                        </form>#}
-{#                    </tr>#}
-{#                {% endfor %}#}
-{#                </tbody>#}
-{#            </table>#}
+            {#            <table class="table">#}
+            {#                <thead>#}
+            {#                <tr>#}
+            {#                    <th>Full name</th>#}
+            {#                    <th>Phone</th>#}
+            {#                    <th>Status</th>#}
+            {#                    <th>Preview</th>#}
+            {#                    <th>Approve</th>#}
+            {#                </tr>#}
+            {#                </thead>#}
+            {#                <tbody>#}
+            {#                {% for f in name %}#}
+            {#                    <tr>#}
+            {#                        <td>{{ f.full_name }}</td>#}
+            {#                        <td>{{ f.contact }}</td>#}
+            {#                        <td>{{ f.status_update }}</td>#}
+            {#                        <form action="{% url 'user_data' f.full_name %}" method="get">#}
+            {#                            {% csrf_token %}#}
+            {#                            <td>#}
+            {#                                <button class="btn-success" id="btn-admin">Preview CV</button>#}
+            {#                            </td>#}
+            {#                        </form>#}
+            {#                        <form action="{% url 'approve' f.full_name %}">#}
+            {#                            {% csrf_token %}#}
+            {#                            <td>#}
+            {#                                <button class="btn-success" id="btn-approve" onclick="return submitForm(this.form)">#}
+            {#                                    Approve#}
+            {#                                </button>#}
+            {#                            </td>#}
+            {#                        </form>#}
+            {#                    </tr>#}
+            {#                {% endfor %}#}
+            {#                </tbody>#}
+            {#            </table>#}
         </div>
     </div>
 </div>
@@ -244,12 +269,12 @@
 {#    function submitForm(form) {#}
 {#        var url = form.attr("action");#}
 {#        var formData = {};#}
-        {#    $(form).find("input[name]").each(function (index, node) {#}
-        {#        formData[node.name] = node.value;#}
-        {#    });#}
+{#    $(form).find("input[name]").each(function (index, node) {#}
+{#        formData[node.name] = node.value;#}
+{#    });#}
 {#        $.post(url).done(function (data) {#}
-            {#        alert(data.value);#}
-            {#        location.reload();#}
+{#        alert(data.value);#}
+{#        location.reload();#}
 {#        });#}
 {##}
 {#        $.get(url, function (data) {#}
