--- a/templates/previewPDF.html
+++ b/templates/previewPDF.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="static/assets/css/new-style.css"/>
-    <link rel="stylesheet" href="{% static 'assets/css/new-style1.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/new-style.css' %}">
 
     <meta charset="utf-8">
     <title>Applicant CV</title>
