--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,11 +3,13 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="static/assets/css/new-style.css"/>
+    <link rel="stylesheet" type="text/css" href="static/assets/css/new-style.css"/>
+    <link rel="stylesheet" type="text/css" href="static/assets/css/new-style.css"/>
     <title>Volunteer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'assets/css/styles.min.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/css/new-style1.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/new-style.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/Footer-Dark.css' %}">
     <link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}">
     {#    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>#}
@@ -59,7 +61,7 @@
                     <strong>First name</strong>
                 </div>
                 <div class="col-md-6">
-                    <input type="text" value="{{ firstname }}" name="firstname" title="firstname">
+                    <input type="text" value="{{ firstname }}" name="firstname" title="firstname" id="inputs">
                 </div>
             </div>
             <div class="row">
@@ -67,7 +69,7 @@
                     <strong>Last name</strong>
                 </div>
                 <div class="col-md-6">
-                    <span>{{ lastname }}</span>
+                    <input type="text" value="{{ lastname }}" name="lastname" title="lastname" id="inputs">
                 </div>
             </div>
             <div class="row">
@@ -75,7 +77,7 @@
                     <strong>Username</strong>
                 </div>
                 <div class="col-md-6">
-                    <span>{{ name }}</span>
+                    <input type="text" value="{{ name }}" name="username" title="username" id="inputs">
                 </div>
             </div>
             <div class="row">
@@ -83,7 +85,7 @@
                     <strong>Email</strong>
                 </div>
                 <div class="col-md-6">
-                    <span>{{ email }}</span>
+                    <input type="text" value="{{ email }}" name="email" title="email" id="inputs">
                 </div>
             </div>
             <div class="row">
@@ -91,7 +93,7 @@
                     <strong>Home</strong>
                 </div>
                 <div class="col-md-6">
-                    <input type="text" value="{{ home }}" name="home">
+                    <input type="text" value="{{ home }}" name="home" id="inputs">
                 </div>
             </div>
             <div class="row">
@@ -99,19 +101,19 @@
                     <strong>Phone number</strong>
                 </div>
                 <div class="col-md-6">
-                    <span>{{ phone }}</span>
+                    <input type="number" value="{{ phone }}" name="phone" title="phone" id="inputs">
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <strong>Role</strong>
-                </div>
-                <div class="col-md-6">
-                    <span>{{ role }}</span>
-                </div>
-            </div>
+            {#            <div class="row">#}
+            {#                <div class="col-md-6">#}
+            {#                    <strong>Role</strong>#}
+            {#                </div>#}
+            {#                <div class="col-md-6">#}
+            {#                    <span>{{ role }}</span>#}
+            {#                </div>#}
+            {#            </div>#}
 
-            <button>save</button>
+            <button class="btn btn-success" type="submit" id="login-btn">Save</button>
 
         </form>
     </div>
